Revert to `--release` profile due to `cargo-chef`

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,7 +21,7 @@ COPY --from=planner /inx-chronicle/recipe.json recipe.json
 
 RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
-RUN cargo build --profile production --bin inx-chronicle
+RUN cargo build --release --bin inx-chronicle
 
 ############################
 # Image
@@ -32,7 +32,7 @@ FROM gcr.io/distroless/cc-debian11:nonroot AS runtime
 
 EXPOSE 9092/tcp
 
-COPY --chown=nonroot:nonroot --from=builder /inx-chronicle/target/production/inx-chronicle /app/inx-chronicle
+COPY --chown=nonroot:nonroot --from=builder /inx-chronicle/target/release/inx-chronicle /app/inx-chronicle
 
 WORKDIR /app
 USER nonroot
