--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: ./docker/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          # ARM support is currently not working with GitHub Actions.
+          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
