--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ console-subscriber = { version = "0.1", default-features = false, optional = tru
 [dev-dependencies]
 bee-test = { package = "bee-test", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false }
 packable = { version = "0.3.2", default-features = false }
+once_cell = { version = "1.12.0", default-features = false, features = [ "std" ] }
 
 [features]
 default = [
@@ -81,7 +82,7 @@ default = [
     "metrics",
 ]
 analytics = []
-api = [ 
+api = [
     "dep:axum",
     "derive_more/from",
     "dep:hyper",
