--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ uuid = { version = "1.1", default-features = false, features = ["v4"] }
 # API
 axum = { version = "0.5", default-features = false, features = ["http1", "json", "query"], optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
+regex = { version = "1.5", default-features = false, features = ["std"], optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
 tower-http = { version = "0.3", default-features = false, features = ["cors", "catch-panic", "trace"], optional = true }
@@ -85,6 +86,7 @@ api = [
     "dep:axum",
     "derive_more/from",
     "dep:hyper",
+    "dep:regex",
     "dep:serde_urlencoded",
     "dep:tower",
     "dep:tower-http",
