--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,10 @@ jobs:
       - name: Build and push to container registry
         uses: docker/build-push-action@v2
         with:
-          file: ./bin/inx-chronicle/docker/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          file: ./docker/Dockerfile
+          # ARM support is currently not working with GitHub Actions.
+          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
