--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ ed25519 = { version = "=1.4.1", default-features = false, features = ["alloc", "
 hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 jsonwebtoken = { version = "8.1", default-features = false, optional = true }
+lazy_static = { version = "1.4.0", default-features = false, optional = true }
 libp2p-core = { version = "0.32", default-features = false, optional = true }
 regex = { version = "1.5", default-features = false, features = ["std"], optional = true }
 rust-argon2 = { version = "1.0", default-features = false, optional = true }
@@ -95,6 +96,7 @@ api = [
     "derive_more/from",
     "dep:hyper",
     "dep:jsonwebtoken",
+    "dep:lazy_static",
     "dep:libp2p-core",
     "dep:regex",
     "dep:serde_urlencoded",
