--- a/.github/workflows/_fmt.yml
+++ b/.github/workflows/_fmt.yml
@@ -27,3 +27,13 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: ci-fmt
+      
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: --force cargo-license-template
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: license-template
+          args: --template .license_template
