--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ url = { version = "2.2", default-features = false }
 uuid = { version = "1.1", default-features = false, features = ["v4"] }
 
 # API
-axum = { version = "0.5", default-features = false, features = ["http1", "json", "query", "original-uri", "headers"], optional = true }
+axum = { version = "0.5", default-features = false, features = ["http1", "json", "query"], optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
 regex = { version = "1.5", default-features = false, features = ["std"], optional = true }
