--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,11 +1,11 @@
 [alias]
 ci-build-all = "build --all-targets --all-features"
 ci-build-inx = "build --all-targets --no-default-features --features inx,stardust"
-ci-build-api = "build --all-targets --no-default-features --features api-node,stardust"
+ci-build-api = "build --all-targets --no-default-features --features api-core,stardust"
 
 ci-clippy-all = "clippy --all-targets --all-features -- -D warnings"
 ci-clippy-inx = "clippy --all-targets --no-default-features --features inx,stardust -- -D warnings"
-ci-clippy-api = "clippy --all-targets --no-default-features --features api-node,stardust -- -D warnings"
+ci-clippy-api = "clippy --all-targets --no-default-features --features api-core,api-explorer,api-analytics,stardust -- -D warnings"
 
 ci-doctest = "test --doc --all-features --release"
 ci-doc = "doc --all-features --no-deps --document-private-items"
