--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -2,6 +2,8 @@
 connect_url = "mongodb://localhost:27017"
 username = "root"
 password = "root"
+
+# Chronicle allows different database names, so multiple networks can run within the same MongoDB instance.
 database_name = "chronicle"
 
 [api]
@@ -9,8 +11,14 @@ port = 8042
 allow_origins = "0.0.0.0"
 
 [inx]
+# The bind address of the node's INX interface.
 connect_url = "http://localhost:9029"
+# The time to wait until a new connection attempt is made.
 connection_retry_interval = "5s"
+# The maximum number of tries to establish an INX connection.
+connection_retry_count = 5
+# The milestone at which synchronization should begin. A value of `1` means syncing back until genesis.
+sync_start_milestone = 1 
 
 [metrics]
 address = "0.0.0.0"
