--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -9,6 +9,10 @@ port = 8042
 allow_origins = "0.0.0.0"
 password_hash = "c42cf2be3a442a29d8cd827a27099b0c" # "password"
 password_salt = "saltines"
+jwt_expiration = "72h"
+public_routes = [
+    "api/core/*"
+]
 
 [inx]
 connect_url = "http://localhost:9029"
