--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ uuid = { version = "1.1", default-features = false, features = ["v4"] }
 axum = { version = "0.5", default-features = false, features = ["http1", "json", "query"], optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
+packable = { version = "0.4", default-features = false, optional = true }
 regex = { version = "1.5", default-features = false, features = ["std"], optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
@@ -88,6 +89,7 @@ api = [
     "derive_more/from",
     "dep:hyper",
     "dep:lazy_static",
+    "dep:packable",
     "dep:regex",
     "dep:serde_urlencoded",
     "dep:tower",
