feat(api): add JWT authentication (#281)
* feat(api): add JWT authentication (#205)

* Initial jwt attempt

* Better error handling. Correct casing for bearer token. Only apply auth to api endpoints and move login to base uri. Fix login info json. Add exp claim to provided jwt.

* Sort

* fix feature gating

* config jwt expiration

* Accept passwords for login instead of hash and configure salt

* Add hex dep to api feature

* Remove unnecessary clippy tag

* Little cleanup to login route

* PR suggestions

* Use updated auth-helper

* PR suggestions

* PR suggestions

* Clean up allow origins

--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -9,6 +9,12 @@ database_name = "chronicle"
 [api]
 port = 8042
 allow_origins = "0.0.0.0"
+password_hash = "c42cf2be3a442a29d8cd827a27099b0c" # "password"
+password_salt = "saltines"
+jwt_expiration = "72h"
+public_routes = [
+    "api/core/*"
+]
 
 [inx]
 # The bind address of the node's INX interface.
