--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,13 +48,19 @@ url = { version = "2.2", default-features = false }
 uuid = { version = "1.1", default-features = false, features = ["v4"] }
 
 # API
-axum = { version = "0.5", default-features = false, features = ["http1", "json", "query"], optional = true }
+auth-helper = { version = "0.3", default-features = false, optional = true }
+axum = { version = "0.5", default-features = false, features = ["http1", "json", "query", "original-uri", "headers"], optional = true }
+ed25519 = { version = "1.5", default-features = false, features = ["alloc", "pkcs8", "pem"], optional = true }
+ed25519-dalek = { version = "1.0", default-features = false, optional = true }
+hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
+rand = { version = "0.8", default-features = false, features = ["std"], optional = true }
 regex = { version = "1.5", default-features = false, features = ["std"], optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
 tower-http = { version = "0.3", default-features = false, features = ["cors", "catch-panic", "trace"], optional = true }
+zeroize = { version = "1.5", default-features = false, features = ["std"], optional = true }
 
 # INX
 inx = { git = "https://github.com/iotaledger/inx", version = "0.4", default-features = false, features = ["types"], optional = true }
@@ -84,14 +90,20 @@ default = [
 ]
 analytics = []
 api = [ 
+    "dep:auth-helper",
     "dep:axum",
+    "dep:ed25519",
+    "dep:ed25519-dalek",
+    "dep:hex",
     "derive_more/from",
     "dep:hyper",
     "dep:lazy_static",
+    "dep:rand",
     "dep:regex",
     "dep:serde_urlencoded",
     "dep:tower",
     "dep:tower-http",
+    "dep:zeroize",
 ]
 api-history = [
     "api",
