--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ ed25519-dalek = { version = "1.0", default-features = false, optional = true }
 hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
+packable = { version = "0.4", default-features = false, optional = true }
 rand = { version = "0.8", default-features = false, features = ["std"], optional = true }
 regex = { version = "1.5", default-features = false, features = ["std"], optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
@@ -98,6 +99,7 @@ api = [
     "derive_more/from",
     "dep:hyper",
     "dep:lazy_static",
+    "dep:packable",
     "dep:rand",
     "dep:regex",
     "dep:serde_urlencoded",
