--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -1,31 +1,48 @@
 [mongodb]
+### Listening address of the MongoDB instance.
 connect_url = "mongodb://localhost:27017"
+
+### MongoDB credentials.
 username = "root"
 password = "root"
 
-# Chronicle allows different database names, so multiple networks can run within the same MongoDB instance.
+### Chronicle allows different database names, so multiple 
+### networks can run within the same MongoDB instance.
 database_name = "chronicle"
 
 [api]
+### API listening port. 
 port = 8042
+
+### CORS
 allow_origins = "0.0.0.0"
+
+### JsonWebToken (JWT) credentials.
 password_hash = "c42cf2be3a442a29d8cd827a27099b0c" # "password"
 password_salt = "saltines"
 jwt_expiration = "72h"
+
+### Public API routes.
 public_routes = [
     "api/core/*"
 ]
 
 [inx]
-# The bind address of the node's INX interface.
+### Listening address of the node's INX interface.
 connect_url = "http://localhost:9029"
-# The time to wait until a new connection attempt is made.
+
+### Time to wait until a new connection attempt is made.
 connection_retry_interval = "5s"
-# The maximum number of tries to establish an INX connection.
+
+### Maximum number of tries to establish an INX connection.
 connection_retry_count = 5
-# The milestone at which synchronization should begin. A value of `1` means syncing back until genesis.
+
+### Milestone at which synchronization should begin. A value of `1` means syncing back until genesis.
 sync_start_milestone = 1 
 
 [metrics]
+### Bind address of the metrics server.
 address = "0.0.0.0"
+
+### Port
 port = 9100
