Use cargo patch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,6 @@ dyn-clone = { version = "1.0", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
-indexmap = { version = "1.9", features = ["std"] } # This is only required for `-D warnings` in CI
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime"] }
 pin-project = { version = "1.0", default-features = false }
@@ -134,3 +133,7 @@ inherits = "release"
 codegen-units = 1
 lto = true
 strip = "symbols"
+
+# This is only required for `-D warnings` in CI
+[patch.crates-io]
+indexmap = { git = "https://github.com/bluss/indexmap.git", rev = "a638b99", version = "1.9", features = ["std"] }
