--- a/docker/docker-compose.hornet.yml
+++ b/docker/docker-compose.hornet.yml
@@ -11,7 +11,7 @@ services:
       - ./chronicle_data:/data/db
     # The following is a hack to sneak in `rs.initiate()` to enable replica sets.
     healthcheck:
-      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo -u admin -p pass --quiet) -eq 1
+      test: test $$(echo "rs.initiate().ok || rs.status().ok" | mongo --quiet) -eq 1
       interval: 10s
       start_period: 30s
 
