--- a/docker/docker-compose.hornet.yml
+++ b/docker/docker-compose.hornet.yml
@@ -24,6 +24,10 @@ services:
       - "http://hornet:9029"
       - "--db"
       - "mongodb://mongo:27017"
+      - "--config"
+      - "config.toml"
+    volumes:
+      - ../bin/inx-chronicle/config.template.toml:/app/config.toml:ro
 
   hornet:
     image: iotaledger/hornet:2.0.0-alpha.22
