--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -11,6 +11,9 @@ password = "root"
 database_name = "chronicle"
 
 [api]
+### Whether API requests will be served.
+enabled = true
+
 ### API listening port. 
 port = 8042
 
@@ -43,12 +46,18 @@ connection_retry_interval = "5s"
 ### Maximum number of tries to establish an INX connection.
 connection_retry_count = 10
 
+### Whether INX is used (online mode).
+enabled = true
+
 ### Milestone at which synchronization should begin. A value of `1` means syncing back until genesis.
 sync_start_milestone = 1 
 
 [metrics]
 ### Bind address of the metrics server.
 address = "0.0.0.0"
+
+### Whether metrics will be served.
+enabled = true
 
 ### Bind port of the metrics server.
 port = 9100
