--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -11,6 +11,9 @@ password = "root"
 database_name = "chronicle"
 
 [api]
+### Whether API requests will be served.
+enabled = true
+
 ### API listening port. 
 port = 8042
 
@@ -34,6 +37,9 @@ public_routes = [
 ]
 
 [inx]
+### Whether INX is used (online mode).
+enabled = true
+
 ### Listening address of the node's INX interface.
 connect_url = "http://localhost:9029"
 
@@ -47,6 +53,9 @@ connection_retry_count = 10
 sync_start_milestone = 1 
 
 [metrics]
+### Whether metrics will be served.
+enabled = true
+
 ### Bind address of the metrics server.
 address = "0.0.0.0"
 
