--- a/docker/monitoring/prometheus.yml
+++ b/docker/monitoring/prometheus.yml
@@ -3,9 +3,9 @@ scrape_configs:
   - job_name: inx-chronicle
     scrape_interval: 5s
     static_configs:
-      - targets: ['host.docker.internal:9100']
+      - targets: ['inx-chronicle:9100']
 
   - job_name: hornet
     scrape_interval: 5s
     static_configs:
-      - targets: ['host.docker.internal:9311']
+      - targets: ['hornet:9311']
