Add `health` endpoint to root

--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -28,6 +28,7 @@ jwt_expiration = "72h"
 ### Public API routes.
 public_routes = [
     # General API routes that provide information about Chronicle.
+    "health",
     "api/health",
     "api/info",
 
