--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -34,6 +34,8 @@ public_routes = [
     # Activated APIs.
     "api/core/v2/*",
     "api/history/v2/*",
+
+    "api/analytics/v2/addresses*",
 ]
 
 [inx]
