feat(analytics): enable `/addresses` endpoint (#420)

--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -35,6 +35,8 @@ public_routes = [
     # Activated APIs.
     "api/core/v2/*",
     "api/history/v2/*",
+
+    "api/analytics/v2/addresses*",
 ]
 
 [inx]
