--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -33,10 +33,9 @@ public_routes = [
     "api/info",
 
     # Activated APIs.
+    "api/analytics/v2/*",
     "api/core/v2/*",
     "api/history/v2/*",
-
-    "api/analytics/v2/addresses*",
 ]
 
 [inx]
