--- a/docker/docker-compose.hornet.yml
+++ b/docker/docker-compose.hornet.yml
@@ -32,7 +32,7 @@ services:
       - ../bin/inx-chronicle/config.template.toml:/app/config.toml:ro
 
   hornet:
-    image: iotaledger/hornet:2.0.0-alpha.23
+    image: iotaledger/hornet:2.0.0-alpha.25
     container_name: hornet
     ulimits:
       nofile:
@@ -51,7 +51,7 @@ services:
       - ALL
     volumes:
       - ./hornet_data:/app/alphanet
-      - ./config.hornet.json:/app/config.json:ro
+      - ./config.alphanet.hornet.json:/app/config.json:ro
     command:
       - "-c"
       - "config.json"
