--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,16 +1,16 @@
 [alias]
-ci-build-all = "build --all-targets --all-features"
-ci-build-inx = "build --all-targets --no-default-features --features inx,stardust"
-ci-build-api = "build --all-targets --no-default-features --features api-core,api-history,analytics,stardust"
+ci-check-all = "check --all-targets --all-features"
+ci-check-inx = "check --all-targets --no-default-features --features inx,stardust"
+ci-check-api = "check --all-targets --no-default-features --features api,stardust"
 
 ci-clippy-all = "clippy --all-targets --all-features -- -D warnings"
 ci-clippy-inx = "clippy --all-targets --no-default-features --features inx,stardust -- -D warnings"
-ci-clippy-api = "clippy --all-targets --no-default-features --features api-core,api-history,analytics,stardust -- -D warnings"
+ci-clippy-api = "clippy --all-targets --no-default-features --features api,stardust -- -D warnings"
 
-ci-doctest = "test --doc --all-features --release"
+ci-doctest = "test --doc --all-features"
 ci-doc = "doc --all-features --no-deps --document-private-items"
 ci-fmt = "fmt --all -- --check"
-ci-test = "test --all-targets --all-features --release"
+ci-test = "test --all-targets --all-features"
 ci-toml = "sort --grouped --check"
 ci-udeps = "udeps --all-targets --all-features --backend=depinfo"
 
