--- a/.github/workflows/_check.yml
+++ b/.github/workflows/_check.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Check and Test
 
 on:
   workflow_call:
@@ -11,7 +11,7 @@ on:
         type: string
 
 jobs:
-  build-and-test:
+  check-and-test:
     name: '${{ inputs.os }}, ${{ inputs.rust }}'
     runs-on: ${{ inputs.os }}
     # Unfortunately, we can't do this right now because `indexmap` does not seem to follow semver.
@@ -42,22 +42,22 @@ jobs:
 
       - uses: Swatinem/rust-cache@v1
 
-      - name: Build with all features
+      - name: Check (all features)
         uses: actions-rs/cargo@v1
         with:
-          command: ci-build-all
+          command: ci-check-all
 
-      - name: Build with INX only
+      - name: Check (INX only)
         if: contains(inputs.os, 'ubuntu')
         uses: actions-rs/cargo@v1
         with:
-          command: ci-build-inx
+          command: ci-check-inx
 
-      - name: Build with API only
+      - name: Check (API only)
         if: contains(inputs.os, 'ubuntu')
         uses: actions-rs/cargo@v1
         with:
-          command: ci-build-api
+          command: ci-check-api
 
       - name: Test
         uses: actions-rs/cargo@v1
