--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ uuid = { version = "1.1", default-features = false, features = ["v4"] }
 auth-helper = { version = "0.3", default-features = false, optional = true }
 axum = { version = "0.5", default-features = false, features = ["http1", "json", "query", "original-uri", "headers"], optional = true }
 ed25519 = { version = "1.5", default-features = false, features = ["alloc", "pkcs8", "pem"], optional = true }
-ed25519-dalek = { version = "1.0", default-features = false, optional = true }
+ed25519-dalek = { version = "1.0", default-features = false, features = ["u64_backend"], optional = true }
 hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
@@ -82,14 +82,11 @@ packable = { version = "0.4", default-features = false }
 
 [features]
 default = [
-    "analytics",
-    "api-history",
-    "api-core",
+    "api",
     "inx",
-    "stardust",
     "metrics",
+    "stardust",
 ]
-analytics = []
 api = [ 
     "dep:auth-helper",
     "dep:axum",
@@ -106,12 +103,7 @@ api = [
     "dep:tower",
     "dep:tower-http",
     "dep:zeroize",
-]
-api-history = [
-    "api",
-]
-api-core = [
-    "api",
+    "stardust",
 ]
 console = [
     "dep:console-subscriber",
