--- a/docker/config.alphanet.hornet.json
+++ b/docker/config.alphanet.hornet.json
@@ -64,7 +64,7 @@
     ]
   },
   "inx": {
-    "enabled": false,
+    "enabled": true,
     "bindAddress": "localhost:9029",
     "pow": {
       "workerCount": 0
