--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ time = { version = "0.3", default-features = false, features = ["std"] }
 tokio = { version = "1.19", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
+uint = { version = "0.9", default-features = false }
 url = { version = "2.2", default-features = false }
 uuid = { version = "1.1", default-features = false, features = ["v4"] }
 
