--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,20 +65,22 @@ tower-http = { version = "0.3", default-features = false, features = ["cors", "c
 zeroize = { version = "1.5", default-features = false, features = ["std"], optional = true }
 
 # INX
-inx = { git = "https://github.com/iotaledger/inx", version = "1.0.0-beta.1", default-features = false, features = ["types"], optional = true }
+bee-inx = { version = "1.0.0-beta.2", default-features = false, optional = true }
+tonic = { version = "0.7.2", default-features = false, optional = true }
 
 # Metrics
 bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false, features = ["sync"], optional = true }
 
 # Stardust types
-bee-api-types-stardust = { package = "bee-api-types", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, optional = true }
-bee-block-stardust = { package = "bee-block", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "dto"], optional = true }
+bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.4", default-features = false, optional = true }
+bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.4", default-features = false, features = [ "dto", "std", "serde", ], optional = true }
 
 # Tokio Console
 console-subscriber = { version = "0.1", default-features = false, optional = true }
 
+
 [dev-dependencies]
-bee-test = { package = "bee-test", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false }
+bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.4", default-features = false, features = [ "dto", "rand", "std", "serde", ] }
 packable = { version = "0.5", default-features = false }
 
 [features]
@@ -111,7 +113,8 @@ console = [
     "tokio/tracing",
 ]
 inx = [
-    "dep:inx",
+    "dep:bee-inx",
+    "dep:tonic",
 ]
 metrics = [
     "dep:bee-metrics",
