--- a/docker/config.alphanet.hornet.json
+++ b/docker/config.alphanet.hornet.json
@@ -1,6 +1,6 @@
 {
   "protocol": {
-    "targetNetworkName": "alphanet-8",
+    "targetNetworkName": "alphanet-9",
     "milestonePublicKeyCount": 3,
     "baseToken": {
       "name": "Shimmer",
@@ -53,7 +53,13 @@
       ]
     }
   },
+  "tangle": {
+    "maxDeltaBlockYoungestConeRootIndexToCMI": 80,
+    "maxDeltaBlockOldestConeRootIndexToCMI": 130
+  },
   "snapshots": {
+    "depth": 500,
+    "interval": 2000,
     "fullPath": "alphanet/snapshots/full_snapshot.bin",
     "deltaPath": "alphanet/snapshots/delta_snapshot.bin",
     "downloadURLs": [
@@ -63,11 +69,7 @@
       }
     ]
   },
-  "inx": {
-    "enabled": true,
-    "bindAddress": "localhost:9029",
-    "pow": {
-      "workerCount": 0
-    }
+  "warpsync": {
+    "advancementRange": 1500
   }
 }
