--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -35,7 +35,7 @@ public_routes = [
     # Activated APIs.
     "api/analytics/v2/*",
     "api/core/v2/*",
-    "api/history/v2/*",
+    "api/explorer/v2/*",
     "api/indexer/v1/*",
 ]
 
