--- a/docs/api-analytics.yml
+++ b/docs/api-analytics.yml
@@ -128,6 +128,23 @@ paths:
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalError"
+  /api/analytics/v2/activity/blocks/milestone:
+    get:
+      tags:
+        - activity
+      summary: Returns total milestone type block count.
+      description: >-
+        Returns the count of milestone blocks created within the specified milestone range.
+      parameters:
+        - $ref: "#/components/parameters/startIndex"
+        - $ref: "#/components/parameters/endIndex"
+      responses:
+        "200":
+          $ref: "#/components/responses/Block"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalError"
   /api/analytics/v2/activity/blocks/tagged-data:
     get:
       tags:
