--- a/.github/workflows/_docker.yml
+++ b/.github/workflows/_docker.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker-compose -f ./docker/docker-compose.hornet.yml build
+        run: docker compose -f ./docker/docker-compose.yml -f ./docker/docker-compose.prod.yml build
