--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,9 @@ clap = { version = "3.2", default-features = false, features = [ "env", "derive"
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
 dotenv = { version = "0.15", default-features = false }
 dyn-clone = { version = "1.0", default-features = false }
-env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
-log = { version = "0.4", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime"] }
 pin-project = { version = "1.0", default-features = false }
 prefix-hex = { version = "0.4.0", default-features = false, features = [ "primitive-types" ] }
@@ -46,6 +44,9 @@ time = { version = "0.3", default-features = false, features = ["std"] }
 tokio = { version = "1.19", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
+tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
+tracing-futures = { version = "0.2", default-features = false, features = ["std", "std-future"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter"] }
 uint = { version = "0.9", default-features = false }
 url = { version = "2.2", default-features = false }
 uuid = { version = "1.1", default-features = false, features = ["v4"] }
@@ -79,7 +80,6 @@ bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.5", default-
 
 # Tokio Console
 console-subscriber = { version = "0.1", default-features = false, optional = true }
-
 
 [dev-dependencies]
 bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.5", default-features = false, features = [ "dto", "rand", "std", "serde", ] }
