Configure CI for database tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,13 @@ name: ci
 
 on:
   push:
-    paths-ignore: 
-      - '**.md'
-      - 'bin/inx-chronicle/docker/**'
+    paths-ignore:
+      - "**.md"
+      - "bin/inx-chronicle/docker/**"
   pull_request:
-    paths-ignore: 
-      - '**.md'
-      - 'bin/inx-chronicle/docker/**'
+    paths-ignore:
+      - "**.md"
+      - "bin/inx-chronicle/docker/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -20,6 +20,11 @@ jobs:
     uses: ./.github/workflows/_check.yml
     with: { os: ubuntu-latest, rust: stable }
 
+  test-db:
+    name: "test database"
+    uses: ./.github/workflows/_test_db.yml
+    with: { os: ubuntu-latest, rust: stable, mongodb: "5.0" }
+
   format:
     uses: ./.github/workflows/_fmt.yml
     with: { os: ubuntu-latest, rust: nightly }
@@ -27,7 +32,7 @@ jobs:
   clippy:
     uses: ./.github/workflows/_clippy.yml
     with: { os: ubuntu-latest, rust: stable }
-  
+
   check-toml:
     runs-on: ubuntu-latest
     steps:
@@ -56,9 +61,9 @@ jobs:
 
       - uses: actions-rs/toolchain@v1
         with:
-            profile: minimal
-            toolchain: nightly
-            override: true
+          profile: minimal
+          toolchain: nightly
+          override: true
 
       - uses: Swatinem/rust-cache@v1
 
