--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,7 +10,8 @@ ci-clippy-api = "clippy --all-targets --no-default-features --features api,stard
 ci-doctest = "test --doc --all-features"
 ci-doc = "doc --all-features --no-deps --document-private-items"
 ci-fmt = "fmt --all -- --check"
-ci-test = "test --all-targets --all-features"
+ci-test = "test --all-targets"
+ci-test-db = "test --all-targets --all-features test_db"
 ci-toml = "sort --grouped --check"
 ci-udeps = "udeps --all-targets --all-features --backend=depinfo"
 
